crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__control_failed_serializes.snap
---
source: coglet-worker/src/protocol.rs
expression: resp
---
{
  "type": "failed",
  "slot": "550e8400-e29b-41d4-a716-446655440000",
  "error": "segfault"
}
