crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__control_idle_serializes.snap
---
source: coglet-worker/src/protocol.rs
assertion_line: 173
expression: resp
---
{
  "type": "idle",
  "slot": 1
}
