crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__control_ready_serializes.snap
---
source: coglet-worker/src/protocol.rs
assertion_line: 156
expression: resp
---
{
  "type": "ready"
}
