crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__control_shutdown_serializes.snap
---
source: coglet-worker/src/protocol.rs
assertion_line: 150
expression: req
---
{
  "type": "shutdown"
}
