crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__request_cancel_serializes.snap
---
source: coglet-worker/src/protocol.rs
expression: req
---
{
  "type": "cancel",
  "id": "pred_123"
}
