crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__request_predict_serializes.snap
---
source: coglet-worker/src/protocol.rs
expression: req
---
{
  "type": "predict",
  "id": "pred_123",
  "input": {
    "text": "hello"
  }
}
