crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__response_error_serializes.snap
---
source: coglet-worker/src/protocol.rs
expression: resp
---
{
  "type": "error",
  "id": "pred_123",
  "error": "something went wrong",
  "logs": "traceback here"
}
