crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__response_output_serializes.snap
---
source: coglet-worker/src/protocol.rs
expression: resp
---
{
  "type": "output",
  "id": "pred_123",
  "output": "hello world",
  "status": "succeeded",
  "predict_time": 0.123
}
