crates/coglet-worker/src/snapshots/coglet_worker__protocol__tests__response_ready_with_schema_serializes.snap
---
source: coglet-worker/src/protocol.rs
expression: resp
---
{
  "type": "ready",
  "schema": {
    "info": {
      "title": "Cog",
      "version": "0.1.0"
    },
    "openapi": "3.0.2"
  }
}
